--- a/mainpage.css
+++ b/mainpage.css
@@ -80,6 +80,15 @@ h1 {
   text-align: justify;
 }
 
+/* Vegetable section accent */
+#eng-vegetable, #chi-vegetable {
+  color: #228b22; /* fresh green */
+}
+
+#eng-vegetable-p, #chi-vegetable-p {
+  border-left: 5px solid #228b22;
+}
+
 /* Section image with animation */
 .section img {
   flex: 1;
